--- a/frontend/app/src/main/res/layout/positive_experiences.xml
+++ b/frontend/app/src/main/res/layout/positive_experiences.xml
@@ -1,12 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Widget.FinalYearProject00.AppWidget.Container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:theme="@style/Theme.FinalYearProject00.AppWidgetContainer"
-    android:layout_margin="5dp"
-    android:backgroundTint="#82E182">
+    style="@style/Widget.FinalYearProject00.AppWidget.Container">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:theme="@style/Theme.FinalYearProject00.AppWidgetContainer"
+        android:layout_margin="5dp"
+        android:backgroundTint="#82E182"
+        android:id="@+id/posRL">
 
     <TextView
         android:id="@+id/PositivePageTitle"
@@ -36,6 +39,16 @@
         <requestFocus />
     </EditText>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pll"
+            android:layout_below="@+id/positiveExp01"
+            android:orientation="vertical"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginBottom="-14dp">
+        </LinearLayout>
     <Button
         android:id="@+id/addPositiveExp"
         android:layout_width="40dp"
@@ -68,10 +81,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/positiveExp01"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="154dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="350dp"
         android:backgroundTint="#B2E6F9"
         android:text="Submit"
         android:textColor="#FFFFFF" />
-
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
