--- a/frontend/app/src/main/res/layout/activity_main.xml
+++ b/frontend/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B5DBE9"
+    android:background="#E3F5FF"
     android:paddingTop="?attr/actionBarSize">
 
     <com.jjoe64.graphview.GraphView
@@ -36,7 +36,7 @@
         android:layout_width="162dp"
         android:layout_height="117dp"
         android:layout_marginBottom="120dp"
-        android:backgroundTint="#8FA998"
+        android:backgroundTint="#9CBFA7"
         android:onClick="moveToPosPage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
@@ -48,7 +48,7 @@
         android:layout_width="162dp"
         android:layout_height="117dp"
         android:layout_marginBottom="120dp"
-        android:backgroundTint="#000000"
+        android:backgroundTint="#E54B4B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.875"
         app:layout_constraintLeft_toLeftOf="parent"
