--- a/frontend/app/src/main/res/layout/negative_experiences.xml
+++ b/frontend/app/src/main/res/layout/negative_experiences.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:theme="@style/Theme.FinalYearProject00.AppWidgetContainer"
         android:layout_margin="5dp"
-        android:backgroundTint="#D3D3D3"
+        android:backgroundTint="#FFFFFF"
         android:id="@+id/negRL">
 
     <TextView
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:text="Please add your negative experiences:"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#FFFFFF" />
+        android:textColor="#E54B4B" />
 
 
     <EditText
@@ -30,9 +30,9 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/NegativePageTitle"
         android:layout_marginLeft="70dp"
-        android:layout_marginBottom="-140dp"
-        android:backgroundTint="#999999"
-        android:ems="13"
+        android:layout_marginBottom="-145dp"
+        android:textColor="@color/black"
+        android:text="Negative Experience Input"
         android:inputType="text"
         android:minHeight="45dp"
         tools:ignore="SpeakableTextPresentCheck">
@@ -60,7 +60,7 @@
             android:layout_marginLeft="279dp"
             android:layout_marginTop="-0dp"
             android:layout_marginRight="220dp"
-            android:backgroundTint="#FF6347"
+            android:backgroundTint="#E54B4B"
             android:text="+"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
@@ -75,7 +75,7 @@
             android:layout_marginLeft="327dp"
             android:layout_marginTop="-0dp"
             android:layout_marginRight="300dp"
-            android:backgroundTint="#FF6347"
+            android:backgroundTint="#E54B4B"
             android:text="-"
             android:textColor="#FFFFFF"
             android:textSize="15dp" />
@@ -89,7 +89,7 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="160dp"
             android:layout_marginTop="350dp"
-            android:backgroundTint="#FF6347"
+            android:backgroundTint="#E54B4B"
             android:text="Submit"
             android:textColor="#FFFFFF" />
 
@@ -101,7 +101,7 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="26dp"
             android:layout_marginTop="427dp"
-            android:backgroundTint="#FF6347"
+            android:backgroundTint="#E54B4B"
             android:onClick="moveToHomePage"
             android:shape="oval"
             android:textColor="#FFFFFF"
