--- a/frontend/app/src/main/res/layout/positive_experiences.xml
+++ b/frontend/app/src/main/res/layout/positive_experiences.xml
@@ -19,25 +19,24 @@
         android:layout_centerHorizontal="true"
         android:text="Please add your positive experiences:"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#8FA998" />
+        android:textColor="#9CBFA7" />
 
 
+        <EditText
+            android:id="@+id/positiveExp01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/PositivePageTitle"
+            android:layout_marginLeft="70dp"
+            android:layout_marginBottom="-145dp"
+            android:inputType="textAutoCorrect"
+            android:minHeight="45dp"
+            android:text="Positive Experience Input"
+            android:textColor="@color/black"
+            tools:ignore="SpeakableTextPresentCheck">
 
-    <EditText
-        android:id="@+id/positiveExp01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/PositivePageTitle"
-        android:layout_marginLeft="70dp"
-        android:layout_marginBottom="-140dp"
-        android:backgroundTint="#999999"
-        android:ems="13"
-        android:inputType="textPersonName"
-        android:minHeight="45dp"
-        tools:ignore="SpeakableTextPresentCheck">
-
-        <requestFocus />
-    </EditText>
+            <requestFocus />
+        </EditText>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -58,7 +57,7 @@
         android:layout_marginLeft="279dp"
         android:layout_marginTop="-0dp"
         android:layout_marginRight="220dp"
-        android:backgroundTint="#8FA998"
+        android:backgroundTint="#9CBFA7"
         android:text="+"
         android:textColor="#FFFFFF" />
 
@@ -71,7 +70,7 @@
         android:layout_marginLeft="327dp"
         android:layout_marginTop="-0dp"
         android:layout_marginRight="300dp"
-        android:backgroundTint="#8FA998"
+        android:backgroundTint="#9CBFA7"
         android:text="-"
         android:textColor="#FFFFFF" />
 
@@ -83,7 +82,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="160dp"
         android:layout_marginTop="350dp"
-        android:backgroundTint="#8FA998"
+        android:backgroundTint="#9CBFA7"
         android:text="Submit"
         android:textColor="#FFFFFF" />
 
@@ -95,7 +94,7 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="26dp"
             android:layout_marginTop="427dp"
-            android:backgroundTint="#8FA998"
+            android:backgroundTint="#9CBFA7"
             android:onClick="moveToHomePage"
             android:shape="oval"
             android:textColor="#FFFFFF"
