--- a/frontend/app/src/main/res/layout/positive_experiences.xml
+++ b/frontend/app/src/main/res/layout/positive_experiences.xml
@@ -38,17 +38,33 @@
             <requestFocus />
         </EditText>
 
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="140dp"
+            android:spinnerMode="dropdown" />
+
         <LinearLayout
+            android:id="@+id/dropdownLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/spinner1"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"></LinearLayout>
+
+        <LinearLayout
             android:id="@+id/pll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/positiveExp01"
-            android:orientation="vertical"
-            android:layout_marginTop="150dp"
             android:layout_marginLeft="70dp"
-            android:layout_marginBottom="-14dp">
-        </LinearLayout>
-    <Button
+            android:layout_marginTop="150dp"
+            android:orientation="vertical"></LinearLayout>
+
+        <Button
         android:id="@+id/addPositiveExp"
         android:layout_width="40dp"
         android:layout_height="40dp"
