--- a/frontend/app/src/main/res/layout/negative_experiences.xml
+++ b/frontend/app/src/main/res/layout/negative_experiences.xml
@@ -39,6 +39,23 @@
 
     </EditText>
 
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="140dp"
+            android:spinnerMode="dropdown" />
+
+        <LinearLayout
+            android:id="@+id/dropdownLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/spinner"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"></LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
