--- a/frontend/app/src/main/res/layout/activity_main.xml
+++ b/frontend/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,8 @@
             android:textSize="10dp"
             android:backgroundTint="#FFFFFF"
             android:textColor="@color/black"
-            android:layout_marginLeft="20dp">
+            android:layout_marginLeft="20dp"
+            android:id="@+id/signOutButton">
 
         </Button>
 
