--- a/frontend/app/src/main/res/layout/activity_main.xml
+++ b/frontend/app/src/main/res/layout/activity_main.xml
@@ -13,64 +13,60 @@
         android:id="@+id/graphOfExp"
         android:layout_width="match_parent"
         android:layout_height="200dip"
-        android:layout_marginBottom="392dp"
+        android:layout_marginBottom="356dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
-
     <Button
         android:id="@+id/posExpView"
-        android:layout_width="162dp"
-        android:layout_height="117dp"
-        android:layout_marginBottom="120dp"
+        android:layout_width="130dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="185dp"
         android:backgroundTint="#9CBFA7"
         android:onClick="moveToPosPage"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintHorizontal_bias="0.19"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/negExpView"
-        android:layout_width="162dp"
-        android:layout_height="117dp"
-        android:layout_marginBottom="120dp"
+        android:layout_width="130dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="185dp"
         android:backgroundTint="#E54B4B"
+        android:onClick="moveToNegPage"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.875"
+        app:layout_constraintHorizontal_bias="0.836"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:onClick="moveToNegPage"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="582dp"
-        tools:ignore="MissingConstraints">
+    <Button
+        android:id="@+id/signOutButton"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="72dp"
+        android:backgroundTint="#FFFFFF"
+        android:text="Logout"
+        android:textColor="@color/black"
+        android:textSize="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/posExpView"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="58dp"></Button>
 
-        <Button
-            android:layout_width="80dp"
-            android:layout_height="50dp"
-            android:text="Logout"
-            android:textSize="10dp"
-            android:backgroundTint="#FFFFFF"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/signOutButton">
+    <Button
+        android:id="@+id/helpfulResources"
+        android:layout_width="300dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="#E54B4B"
+        android:text="Your Ratio is low: click for helpful resources!"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/graphOfExp"
+        app:layout_constraintLeft_toLeftOf="@id/posExpView"
+        tools:ignore="MissingConstraints"></Button>
 
-        </Button>
-
-    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
