--- a/frontend/app/src/main/res/layout/activity_main.xml
+++ b/frontend/app/src/main/res/layout/activity_main.xml
@@ -21,25 +21,52 @@
 
     <Button
         android:id="@+id/posExpView"
-        android:layout_width="130dp"
+        android:layout_width="150dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="185dp"
+        android:layout_marginBottom="135dp"
         android:backgroundTint="#9CBFA7"
         android:onClick="moveToPosPage"
+        android:text="Add Positive Experiences"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/viewAllPos"
+        android:layout_width="150dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="260dp"
+        android:backgroundTint="#9CBFA7"
+        android:text="View Positive Experiences"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/negExpView"
-        android:layout_width="130dp"
+        android:layout_width="150dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="185dp"
+        android:layout_marginBottom="135dp"
         android:backgroundTint="#E54B4B"
         android:onClick="moveToNegPage"
+        android:text="ADD NEGATIVE EXPERIENCES"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.836"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/viewAllNeg"
+        android:layout_width="150dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="260dp"
+        android:backgroundTint="#E54B4B"
+        android:onClick="moveToNegPage"
+        android:text="View Negative Experiences"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -47,7 +74,7 @@
         android:id="@+id/signOutButton"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="36dp"
         android:backgroundTint="#FFFFFF"
         android:text="Logout"
         android:textColor="@color/black"
@@ -60,6 +87,7 @@
         android:id="@+id/helpfulResources"
         android:layout_width="300dp"
         android:layout_height="80dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="#E54B4B"
         android:text="Your Ratio is low: click for helpful resources!"
