--- a/frontend/app/src/main/res/layout/view_all_pos.xml
+++ b/frontend/app/src/main/res/layout/view_all_pos.xml
@@ -2,23 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#9CBFA7">
-    <RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/rlPos"
-    tools:ignore="MissingConstraints">
 
-    </RelativeLayout>
 
     <Button
         android:id="@+id/leaveResourcePage"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginLeft="64dp"
-        android:layout_marginBottom="92dp"
+        android:layout_marginLeft="104dp"
+        android:layout_marginBottom="88dp"
         android:backgroundTint="#FFFFFF"
         android:text="Back to Main Page"
         android:textColor="@color/black"
@@ -26,4 +23,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:ignore="MissingConstraints" />
+
+
+    <LinearLayout
+        android:id="@+id/rlPos"
+        android:layout_width="200dp"
+        android:layout_height="500dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="60dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/leaveResourcePage"
+        app:layout_constraintLeft_toLeftOf="@id/leaveResourcePage"
+        tools:ignore="MissingConstraints">
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
